@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009, 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2009, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,38 +26,38 @@
 package com.sun.javafx.iio.common;
 
 import com.sun.javafx.iio.ImageFormatDescription;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class ImageDescriptor implements ImageFormatDescription {
     private final String formatName;
     private final List<String> extensions;
     private final List<Signature> signatures;
-//    private String[] MIMETypes;
+    private final List<String> mimeSubtypes;
 
-    public ImageDescriptor(String formatName, String[] extensions, Signature[] signatures) {
+    public ImageDescriptor(String formatName, String[] extensions, Signature[] signatures, String[] mimeSubtypes) {
         this.formatName = formatName;
-        this.extensions = Collections.unmodifiableList(
-                                          Arrays.asList(extensions));
-        this.signatures = Collections.unmodifiableList(
-                                          Arrays.asList(signatures));
-//        this.MIMETypes = MIMETypes;
+        this.extensions = List.of(extensions);
+        this.signatures = List.of(signatures);
+        this.mimeSubtypes = List.of(mimeSubtypes);
     }
 
+    @Override
     public String getFormatName() {
         return formatName;
     }
 
+    @Override
     public List<String> getExtensions() {
         return extensions;
     }
 
+    @Override
     public List<Signature> getSignatures() {
         return signatures;
     }
 
-//    public String[] getMIMETypes() {
-//        return MIMETypes;
-//    }
+    @Override
+    public List<String> getMIMESubtypes() {
+        return mimeSubtypes;
+    }
 }
